--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -14,7 +14,7 @@
  </head>
  <body>
   <div id="player"></div>
-  <textarea name"lylics_input" aria-valuemax="1" cols="50" rows=5></textarea>
+  <textarea name="lylics_input" id="textarea_id" aria-valuemax="1" cols="50" rows=5></textarea>
   <a id="download" href="#" download="test.txt" onclick="run()">download</a>
  </body>
 </html>
