歌詞タイピング

--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <input type="file" id="getfile" accept="text/*" />
+    <input type="file" id="getfile" accept="text/*"/>
     <script>
         var file = document.querySelector('#getfile');
         
@@ -40,7 +40,8 @@
         <div id="player"></div>
         <div id="display"></div>
     </div>
-    <textarea name="lylics_input" id="input" aria-valuemax="1" cols="50" rows=2 onkeypress="goNext(event.keyCode);"></textarea>
+    <textarea name="lylics_input" id="input" aria-valuemax="1" cols="50" rows=2 
+        placeholder="歌詞タイピング" onkeypress="goNext(event.keyCode);"></textarea>
     <a id="download" href="#" download="test.txt" onclick="FileWriter()">入力結果</a>
 </body>
 </html>
