--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <button type="button" onclick="ply()">更新</button>
     <input type="file" id="getfile" accept="text/*"/>
     <script>
         var file = document.querySelector('#getfile');
