loadVideo()で動画操作

--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <button type="button" onclick="ply()">更新</button>
+    <button type="button" onclick="loadVideo('EKUBLenVvH4')">更新</button><br />
     <input type="file" id="getfile" accept="text/*"/>
     <script>
         var file = document.querySelector('#getfile');
