exportファイル名変更

--- a/TM_WebApp.html
+++ b/TM_WebApp.html
@@ -48,6 +48,6 @@
     </div>
     <textarea name="lylics_input" id="input" aria-valuemax="1" cols="50" rows=2 
         placeholder="TypingArea" onkeypress="goNext(event.keyCode);"></textarea>
-    <a id="download" href="#" download="test.txt" onclick="FileWriter()">Export</a>
+    <a id="download" href="#" download="result.txt" onclick="FileWriter()">Export</a>
 </body>
 </html>
